spacing fixes and other stuff

--- a/force-app/main/default/lwc/hdtRecordEditFormInput/hdtRecordEditFormInput.css
+++ b/force-app/main/default/lwc/hdtRecordEditFormInput/hdtRecordEditFormInput.css
@@ -1,3 +1,7 @@
+:host .slds-form-element__help{
+    position: absolute !important;
+}
+
 .pt0{
     padding-top: 0% !important;
 }
